...
  <string name="shortcut_disabled_message">Shortcut not available</string>
  <string name="new_tab_shortcut_label">New tab</string>
  <string name="get_content_shortcut_label" tools:keep="@string/get_content_shortcut_label">Get content</string>
  <string name="fav_icon">Favicon</string>
  <string name="articleCount" tools:keep="@string/articleCount">%s articles</string>
  <string name="mediaCount" tools:keep="@string/mediaCount">%s medias</string>
  <string name="get_started" tools:keep="@string/get_started">Get started</string>
  <string name="download_books">Download books</string>
  <string name="humankind_knowledge" tools:keep="@string/humankind_knowledge">Humankind\’s knowledge, on your phone.</string>
  <string name="welcome_to_the_family" tools:keep="@string/welcome_to_the_family">Welcome to the family</string>
  <string name="save_books_offline" tools:keep="@string/save_books_offline">Save books offline</string>
  <string name="download_books_message" tools:keep="@string/download_books_message">Download books and read wherever you are.</string>
  <string name="save_books_in_desired_storage">Save books in desired storage</string>
  <string name="storage_location_hint">You can choose your preferred storage location, either SD card or internal storage, for downloading ZIM files from the Settings screen.</string>
  <string name="unable_to_add_to_bookmarks">Unable to add to bookmarks</string>
  <string name="go_to_previous_page">Go to previous page</string>
...
